--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                     <img src="static/img/html.png" alt="Аватар">
                   </div>
                   <div class="flip-card-back">
-                    <p>Тут будет что-то написано про технологию</p>
+                    <p>HTML5 (HyperText Markup Language, version 5) — язык для структурирования и представления содержимого всемирной паутины.</p>
                   </div>
                 </div>
             </div>
@@ -290,7 +290,7 @@
                     <img src="static/img/css.png" alt="Аватар">
                   </div>
                   <div class="flip-card-back">
-                    <p>Тут будет что-то написано про технологию</p>
+                    <p>CSS (Cascading Style Sheets) — формальный язык описания внешнего вида веб-страницы, написанного с использованием языка разметки (чаще всего HTML или XHTML).</p>
                   </div>
                 </div>
             </div>
@@ -301,7 +301,7 @@
                     <img src="static/img/js.png" alt="Аватар">
                   </div>
                   <div class="flip-card-back">
-                    <p>Тут будет что-то написано про технологию</p>
+                    <p>JavaScript - встраиваемый язык для доступа к объектам приложений. Широко применяется в браузерах как язык сценариев для придания интерактивности веб-страницам.</p>
                   </div>
                 </div>
             </div>
@@ -312,7 +312,7 @@
                     <img src="static/img/jquery.png" alt="Аватар">
                   </div>
                   <div class="flip-card-back">
-                    <p>Тут будет что-то написано про технологию</p>
+                    <p>Библиотека jQuery помогает легко получать доступ к любому элементу <b><a href="https://ru.wikipedia.org/wiki/Document_Object_Model">DOM</a></b>, обращаться к атрибутам и содержимому элементов <b><a href="https://ru.wikipedia.org/wiki/Document_Object_Model">DOM</a></b>, манипулировать ими.</p>
                   </div>
                 </div>
             </div>
@@ -323,7 +323,7 @@
                     <img src="static/img/psql.png" alt="Аватар">
                   </div>
                   <div class="flip-card-back">
-                    <p>Тут будет что-то написано про технологию</p>
+                    <p>PostgreSQL - свободная объектно-реляционная система управления базами данных.</p>
                   </div>
                 </div>
             </div>
@@ -334,7 +334,7 @@
                     <img src="static/img/AJAX_logo.png" alt="Аватар">
                   </div>
                   <div class="flip-card-back">
-                    <p>Тут будет что-то написано про технологию</p>
+                    <p>AJAX («асинхронный JS и XML») — технология интерактивных веб-приложений, заключающийся в «фоновом» обмене данными браузера с веб-сервером.</p>
                   </div>
                 </div>
             </div>
@@ -345,7 +345,7 @@
                     <img src="static/img/django-13-1175187.png" alt="Аватар">
                   </div>
                   <div class="flip-card-back">
-                    <p>Тут будет что-то написано про технологию</p>
+                    <p>Django — фреймворк для веб-приложений на языке Python, использующий шаблон проектирования «Модель-Представление-Контроллер»</p>
                   </div>
                 </div>
             </div>
@@ -356,7 +356,7 @@
                     <img src="static/img/json-logo.png" alt="Аватар">
                   </div>
                   <div class="flip-card-back">
-                    <p>Тут будет что-то написано про технологию</p>
+                    <p>JSON применяется в веб-приложениях как для текстового обмена данными между браузером и сервером (AJAX), так и между серверами (программные HTTP-сопряжения).</p>
                   </div>
                 </div>
             </div>
@@ -366,7 +366,7 @@
                     <img src="static/img/bash.png" alt="Аватар">
                   </div>
                   <div class="flip-card-back">
-                    <p>Тут будет что-то написано про технологию</p>
+                    <p>Bash - командная оболочка UNIX, позволяющая настроить и автоматизировать прорцессы на виртуальном или выделенном сервере.</p>
                   </div>
                 </div>
             </div>
@@ -376,7 +376,7 @@
                     <img src="static/img/cpps.png" alt="Аватар">
                   </div>
                   <div class="flip-card-back">
-                    <p>Тут будет что-то написано про технологию</p>
+                    <p>C++ - компилируемый, статически типизированный язык программирования общего назначения.</p>
                   </div>
                 </div>
             </div>
@@ -386,7 +386,7 @@
                     <img src="static/img/github.png" alt="Аватар">
                   </div>
                   <div class="flip-card-back">
-                    <p>Тут будет что-то написано про технологию</p>
+                    <p>GitHub - система контроля версий, позволяющая удобно обновлять приложения в релизе.</p>
                   </div>
                 </div>
             </div>
@@ -396,7 +396,7 @@
                     <img src="static/img/python.png" alt="Аватар">
                   </div>
                   <div class="flip-card-back">
-                    <p>Тут будет что-то написано про технологию</p>
+                    <p>Python - высокоуровневый язык программирования общего назначения с динамической строгой типизацией и автоматическим управлением памятью.</p>
                   </div>
                 </div>
             </div>
@@ -406,7 +406,7 @@
                     <img src="static/img/apache.png" alt="Аватар">
                   </div>
                   <div class="flip-card-back">
-                    <p>Тут будет что-то написано про технологию</p>
+                    <p>Apache HTTP-сервер - свободный веб-сервер, является кроссплатформенным, поддерживает операционные системы Linux, BSD, Mac OS, Microsoft Windows, и др.</p>
                   </div>
                 </div>
             </div>
@@ -416,7 +416,7 @@
                     <img src="static/img/Nginx-Logo.png" alt="Аватар">
                   </div>
                   <div class="flip-card-back">
-                    <p>Тут будет что-то написано про технологию</p>
+                    <p>NGINX — самый популярный веб-сервер в мире, может обработать более чем десять тысяч соединений одновременно.</p>
                   </div>
                 </div>
             </div>
