--- a/index.html
+++ b/index.html
@@ -301,6 +301,17 @@
             </div>
 
             <div class="flip-card">
+              <div class="flip-card-inner">
+                <div class="flip-card-front">
+                  <img src="static/img/vue.png" alt="Аватар">
+                </div>
+                <div class="flip-card-back">
+                  <p>JavaScript-фреймворк с открытым исходным кодом для создания пользовательских интерфейсов.</p>
+                </div>
+              </div>
+          </div>
+
+            <div class="flip-card">
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
                     <img src="static/img/psql.png" alt="Аватар">
