--- a/index.html
+++ b/index.html
@@ -421,6 +421,25 @@
         <h2>Мои работы</h2>
         <div class="linebottom"></div>
 
+        <div class="worksblock">
+          <div class="workitem">
+            <img class="workimg" src="static/img/works/zoo.png" alt="">
+          </div>
+
+          <div class="workitem">
+            <img class="workimg" src="static/img/works/zoo.png" alt="">
+          </div>
+
+          <div class="workitem">
+            <img class="workimg" src="static/img/works/zoo.png" alt="">
+          </div>
+
+          <div class="workitem">
+            <img class="workimg" src="static/img/works/zoo.png" alt="">
+          </div>
+          
+        </div>
+
     </div>
 
     <div id="calc" class="calcmain">
