--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
         <div class="headcontent">
             <div class="mainhead">
                 <div class="heahh">
-                    <h1>Разработка сайтов под ключ</h1>
-                    <h1 class="blur"> и не только</h1>
+                    <h1>Разработка сайтов под ключ <span class="blur">и не только</span></h1>
                 </div>
                 
                 <div class="linebottom"></div>
