--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="static/css/calc.css" rel="stylesheet">
     <link href="static/css/flipbox.css" rel="stylesheet">
     <link href="static/css/form.css" rel="stylesheet">
+    <link href="static/css/footer.css" rel="stylesheet">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -508,7 +509,6 @@
     </div>
 
     <div class="calcmain">
-
       <div class="calc">
           <h2 style="color: aliceblue;">Партнеры</h2>
           <div class="linebottom"></div>
@@ -550,10 +550,27 @@
             </div>
 
           </div>
-
       </div>
   </div>
 
+  <div class="footer">
+    <div class="footer-container">
+      <div class="footermenu">
+        <a href="#main" >Главная</a>
+        <a href="#serv" >Услуги</a>
+        <a href="#works" >Работы</a>
+        <a href="#calc" >Калькулятор</a>
+        <a href="#contact" >Контакты</a>
+      </div>
+      <div class="footer-contacts">
+        <a href="tel:8 (900)-648-26-00" class="mintel"><img src="static/img/phone.png" alt="">8 (900)-648-26-00</a>
+        <a href="mailto:gexar47@gmail.com&body=привет?subject=хочу от тебя сайтов"><img src="static/img/mail.png" alt="">gexar47@gmail.com</a>
+        <a href="https://telegram.im/@gexarVik" target="_blank"><img src="static/img/telegram.png" alt="">8-900-648-26-00</a>
+        <a href="https://wa.me/79006482600"><img src="static/img/WhatsApp.png" alt="">8-900-648-26-00</a>
+      </div>
+      <a href="">Оставить заявку</a>
+    </div>
+  </div>
     
 
 
