--- a/index.html
+++ b/index.html
@@ -488,14 +488,14 @@
 
         <div class="contactbox">
           <div class="contactblock">
-              <a href="tel:8 (900)-648-26-00" class="mintel"><img src="static/img/phone.png" alt="">8 (900)-648-26-00</a>
-              <a href="mailto:gexar47@gmail.com&body=привет?subject=хочу от тебя сайтов"><img src="static/img/mail.png" alt="">gexar47@gmail.com</a>
-              <a href="https://telegram.im/@gexarVik" target="_blank"><img src="static/img/telegram.png" alt="">8-900-648-26-00</a>
-              <a href="https://wa.me/79006482600"><img src="static/img/WhatsApp.png" alt="">8-900-648-26-00</a>
+              <a class="element-animationleft" href="tel:8 (900)-648-26-00"><img src="static/img/phone.png" alt="">8 (900)-648-26-00</a>
+              <a class="element-animationleft" href="mailto:gexar47@gmail.com&body=привет?subject=хочу от тебя сайтов"><img src="static/img/mail.png" alt="">gexar47@gmail.com</a>
+              <a class="element-animationleft" href="https://telegram.im/@gexarVik" target="_blank"><img src="static/img/telegram.png" alt="">8-900-648-26-00</a>
+              <a class="element-animationleft" href="https://wa.me/79006482600"><img src="static/img/WhatsApp.png" alt="">8-900-648-26-00</a>
           </div>
           <div class="contactblock">
             
-              <form action="" class="form-container">
+              <form action="" class="form-container element-animationright">
                   <h3>Оставить заявку</h3>
                   <input type="text" class="smf" placeholder="Введите Ваше имя" required>
                   <input type="tel" class="smf tel" placeholder="Введите Ваш телефон" required>
@@ -579,4 +579,5 @@
 <script src="static/js/menu.js"></script>
 <script src="static/js/services.js"></script>
 <script src="static/js/calc.js"></script>
+<script src="static/js/show.js"></script>
 </html>
