--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
         <a href="https://telegram.im/@gexarVik" target="_blank"><img src="static/img/telegram.png" alt="">8-900-648-26-00</a>
         <a href="https://wa.me/79006482600"><img src="static/img/WhatsApp.png" alt="">8-900-648-26-00</a>
       </div>
-      <a href="">Оставить заявку</a>
+      <a href="#contact">Оставить заявку</a>
     </div>
   </div>
     
