--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href="static/css/flipbox.css" rel="stylesheet">
     <link href="static/css/form.css" rel="stylesheet">
     <link href="static/css/footer.css" rel="stylesheet">
+    <link href="static/css/modal.css" rel="stylesheet">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -580,4 +581,5 @@
 <script src="static/js/services.js"></script>
 <script src="static/js/calc.js"></script>
 <script src="static/js/show.js"></script>
+<script src="static/js/modal.js"></script>
 </html>
