--- a/index.html
+++ b/index.html
@@ -429,37 +429,71 @@
         <div class="linebottom"></div>
 
         <div class="worksblock">
-
-          <div class="workitem">
+<!--Блок примера работ------------------------------------------------------->
+          <div id="myImg" class="workitem">
             <img class="workimg" src="static/img/works/zoo.png" alt="">
             <div class="overlay">
-              <p> <a href="">Просмотр дизайна</a></p>
+              <p> <a href="#myImg">Просмотр дизайна</a></p>
             </div>
           </div>
+<!--модальное окно------------------------------------------------------->
+          <div id="myModal" class="modal">
+            <!-- кнопка закрытия -->
+            <span class="close">&times;</span>
+            <!-- Модальное содержание (изображение) -->
+            <img id="img01" class="modal-content" src="static/img/works/zoo.png" alt="">
+          </div>
+<!--Конец блока примера работ------------------------------------------------------->
 
-          <div class="workitem">
-            <img class="workimg" src="static/img/works/zoo.png" alt="">
-            <div class="overlay">
-              <p> <a href="">Просмотр дизайна</a></p>
-            </div>
-          </div>
+ <!--Блок примера работ------------------------------------------------------->
+ <div id="myImg" class="workitem">
+  <img class="workimg" src="static/img/works/zoo.png" alt="">
+  <div class="overlay">
+    <p> <a href="#myImg">Просмотр дизайна</a></p>
+  </div>
+</div>
+<!--модальное окно------------------------------------------------------->
+<div id="myModal" class="modal">
+  <!-- кнопка закрытия -->
+  <span class="close">&times;</span>
+  <!-- Модальное содержание (изображение) -->
+  <img id="img01" class="modal-content" src="static/img/works/zoo.png" alt="">
+</div>
+<!--Конец блока примера работ------------------------------------------------------->
 
-          <div class="workitem">
-            <img class="workimg" src="static/img/works/zoo.png" alt="">
-            <div class="overlay">
-              <p> <a href="">Просмотр дизайна</a></p>
-            </div>
-          </div>
+<!--Блок примера работ------------------------------------------------------->
+<div id="myImg" class="workitem">
+  <img class="workimg" src="static/img/works/zoo.png" alt="">
+  <div class="overlay">
+    <p> <a href="#myImg">Просмотр дизайна</a></p>
+  </div>
+</div>
+<!--модальное окно------------------------------------------------------->
+<div id="myModal" class="modal">
+  <!-- кнопка закрытия -->
+  <span class="close">&times;</span>
+  <!-- Модальное содержание (изображение) -->
+  <img id="img01" class="modal-content" src="static/img/works/zoo.png" alt="">
+</div>
+<!--Конец блока примера работ------------------------------------------------------->
 
-          <div class="workitem">
-            <img class="workimg" src="static/img/works/zoo.png" alt="">
-            <div class="overlay">
-              <p> <a href="">Просмотр дизайна</a></p>
-            </div>
-          </div>
+<!--Блок примера работ------------------------------------------------------->
+<div id="myImg" class="workitem">
+  <img class="workimg" src="static/img/works/zoo.png" alt="">
+  <div class="overlay">
+    <p> <a href="#myImg">Просмотр дизайна</a></p>
+  </div>
+</div>
+<!--модальное окно------------------------------------------------------->
+<div id="myModal" class="modal">
+  <!-- кнопка закрытия -->
+  <span class="close">&times;</span>
+  <!-- Модальное содержание (изображение) -->
+  <img id="img01" class="modal-content" src="static/img/works/zoo.png" alt="">
+</div>
+<!--Конец блока примера работ------------------------------------------------------->
           
         </div>
-
     </div>
 
     <div id="calc" class="calcmain">
