--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
 
  <!--Блок примера работ------------------------------------------------------->
  <div id="myImg" class="workitem">
-  <img class="workimg" src="static/img/works/zoo.png" alt="">
+  <img class="workimg" src="static/img/works/DEREVENSKIE_LAKOMSTVA.jpg" alt="">
   <div class="overlay">
     <p> <a href="#myImg">Просмотр дизайна</a></p>
   </div>
@@ -457,7 +457,7 @@
   <!-- кнопка закрытия -->
   <span class="close">&times;</span>
   <!-- Модальное содержание (изображение) -->
-  <img id="img01" class="modal-content" src="static/img/works/zoo.png" alt="">
+  <img id="img01" class="modal-content" src="static/img/works/DEREVENSKIE_LAKOMSTVA.jpg" alt="">
 </div>
 <!--Конец блока примера работ------------------------------------------------------->
 
