--- a/index.html
+++ b/index.html
@@ -461,7 +461,38 @@
 </div>
 <!--Конец блока примера работ------------------------------------------------------->
 
-          
+<!--Блок примера работ------------------------------------------------------->
+<div id="myImg" class="workitem">
+  <img class="workimg" src="static/img/works/DEREVENSKIE_LAKOMSTVA.jpg" alt="">
+  <div class="overlay">
+    <p> <a href="#myImg">Просмотр дизайна</a></p>
+  </div>
+</div>
+<!--модальное окно------------------------------------------------------->
+<div id="myModal" class="modal">
+  <!-- кнопка закрытия -->
+  <span class="close">&times;</span>
+  <!-- Модальное содержание (изображение) -->
+  <img id="img01" class="modal-content" src="static/img/works/DEREVENSKIE_LAKOMSTVA.jpg" alt="">
+</div>
+<!--Конец блока примера работ------------------------------------------------------->
+    
+<!--Блок примера работ------------------------------------------------------->
+<div id="myImg" class="workitem">
+  <img class="workimg" src="static/img/works/zoo.png" alt="">
+  <div class="overlay">
+    <p> <a href="#myImg">Просмотр дизайна</a></p>
+  </div>
+</div>
+<!--модальное окно------------------------------------------------------->
+<div id="myModal" class="modal">
+  <!-- кнопка закрытия -->
+  <span class="close">&times;</span>
+  <!-- Модальное содержание (изображение) -->
+  <img id="img01" class="modal-content" src="static/img/works/zoo.png" alt="">
+</div>
+<!--Конец блока примера работ------------------------------------------------------->
+
         </div>
     </div>
 
