--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link href="static/css/form.css" rel="stylesheet">
     <link href="static/css/footer.css" rel="stylesheet">
     <link href="static/css/modal.css" rel="stylesheet">
+    <link href="static/css/mobil.css" rel="stylesheet">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -133,16 +134,14 @@
                     <div class="servabout">
                         <h3>Создание дизайна</h3>
                         <p>Одним из первоначальных этапов при разработке и запуске любого бизнес проекта в Интернет является веб-дизайн сайта. 
-                            Именно от его индивидуальности в определенной мере будет зависеть успешность Вашего дела. Ведь, как человек, который
-                             обладает яркой, запоминающейся внешностью, всегда будет выделяться среди людской толпы,
-                             так и web-страницы должны быть уникальными и неповторимыми, чтобы не затеряться во всемирной паутине.
+                            От его индивидуальности в определенной мере будет зависеть успешность Вашего дела.
                         </p>
                     </div>
 
                     <div class="servabout">
                         <h3>Верстка сайта</h3>
                         <p>Понятие верстки позаимствовано из издательской деятельности, где в книгах, журналах и газетах 
-                            информацию располагали продуманно, особым образом. Главная цель верстки, в том числе и верстки сайта,
+                            информацию располагали продуманно, особым образом. Главная цель верстки
                              — расположить текстовые и графические элементы так, чтобы читателю было максимально удобно и интересно усваивать информацию.
                         </p>
                     </div>
@@ -545,7 +544,7 @@
 
     <div class="calcmain">
       <div class="calc">
-          <h2 style="color: aliceblue;">Партнеры</h2>
+          <h2>Партнеры</h2>
           <div class="linebottom"></div>
 
           <div class="partners">
