--- a/index.html
+++ b/index.html
@@ -120,14 +120,14 @@
 
             <div class="servcontainer">
                 <div class="servnames">
-                    <div class="sername active"><p class="pserv">Создание дизайна</p><div class="round"></div></div>
-                    <div class="sername"><p class="pserv">Верстка сайта</p><div class="round"></div></div>
-                    <div class="sername"><p class="pserv">Адаптация под разные устройства</p><div class="round"></div></div>
-                    <div class="sername"><p class="pserv">Разработка серверной части</p><div class="round"></div></div>
-                    <div class="sername"><p class="pserv">Создание страницы администрирования</p><div class="round"></div></div>
-                    <div class="sername"><p class="pserv">Регистрация домена</p><div class="round"></div></div>
-                    <div class="sername"><p class="pserv">Публикация сайта</p><div class="round"></div></div>
-                    <div class="sername"><p class="pserv">Обучение управлению содержимым</p><div class="round"></div></div>
+                    <div class="sername active"><div class="round leftround"></div><p class="pserv">Создание дизайна</p><div class="round"></div></div>
+                    <div class="sername"><div class="round leftround"></div><p class="pserv">Верстка сайта</p><div class="round"></div></div>
+                    <div class="sername"><div class="round leftround"></div><p class="pserv">Адаптация под разные устройства</p><div class="round"></div></div>
+                    <div class="sername"><div class="round leftround"></div><p class="pserv">Разработка серверной части</p><div class="round"></div></div>
+                    <div class="sername"><div class="round leftround"></div><p class="pserv">Создание страницы администрирования</p><div class="round"></div></div>
+                    <div class="sername"><div class="round leftround"></div><p class="pserv">Регистрация домена</p><div class="round"></div></div>
+                    <div class="sername"><div class="round leftround"></div><p class="pserv">Публикация сайта</p><div class="round"></div></div>
+                    <div class="sername"><div class="round leftround"></div><p class="pserv">Обучение управлению содержимым</p><div class="round"></div></div>
                 </div>
 
                 <div class="servsabout">
