--- a/index.html
+++ b/index.html
@@ -201,13 +201,13 @@
             
             <div class="otherservcontainer">
                 <div class="otherservnames">
-                  <div class="othersername otheractive"><p class="otherpserv">Написание текстов любой тематики</p><div class="otherround"></div></div>
-                  <div class="othersername otheractive"><p class="otherpserv">Разработка десктопных приложений</p><div class="otherround"></div></div>
-                  <div class="othersername"><p class="otherpserv">Написание telegram-ботов</p><div class="otherround"></div></div>
-                  <div class="othersername"><p class="otherpserv">Разработка решений для управления бизнесом</p><div class="otherround"></div></div>
-                  <div class="othersername"><p class="otherpserv">Продвижение сайта</p><div class="otherround"></div></div>
-                  <div class="othersername"><p class="otherpserv">Аналитика сайта</p><div class="otherround"></div></div>
-                  <div class="othersername"><p class="otherpserv">Написание лабораторных и практических работ</p><div class="otherround"></div></div>
+                  <div class="othersername otheractive"><div class="otherround leftround"></div><p class="otherpserv">Написание текстов любой тематики</p><div class="otherround"></div></div>
+                  <div class="othersername otheractive"><div class="otherround leftround"></div><p class="otherpserv">Разработка десктопных приложений</p><div class="otherround"></div></div>
+                  <div class="othersername"><div class="otherround leftround"></div><p class="otherpserv">Написание telegram-ботов</p><div class="otherround"></div></div>
+                  <div class="othersername"><div class="otherround leftround"></div><p class="otherpserv">Разработка решений для управления бизнесом</p><div class="otherround"></div></div>
+                  <div class="othersername"><div class="otherround leftround"></div><p class="otherpserv">Продвижение сайта</p><div class="otherround"></div></div>
+                  <div class="othersername"><div class="otherround leftround"></div><p class="otherpserv">Аналитика сайта</p><div class="otherround"></div></div>
+                  <div class="othersername"><div class="otherround leftround"></div><p class="otherpserv">Написание лабораторных и практических работ</p><div class="otherround"></div></div>
                 </div>
                 
                 <div class="otherservsabout">
